<resources>
    <string name="app_name">Bybocam</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="splashimage">splashImage</string>

    <string name="channel_id">AIzaSyB26K6mX3MsDmmSqRHyeF4WpY0fYZiz2hY</string>
    <string name="firebase_server_key">AAAAbfkD6dQ:APA91bFyVOWxIy13s_jMUZqcwHs_IFEkoG_iavxmVI80w9p4m7VTn2Htj_g5wOahHBX93H9lACM1bZpLLptYaCffV-pJNVN5FnsRVzWhDwbuHgU4MCvDeqxlTQ_GRrPrW8jd546Hm5Z2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">  Enter your email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup">Signup</string>
    <string name="do_you_have_any_account">Do you have any account ?</string>
    <string name="login">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="bybocam">Bybocam</string>
    <string name="message">Message</string>
    <string name="recommendation">Recommendations</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="add_video">Add Video</string>
    <string name="cancel">Cancel</string>
    <string name="to">To:</string>
    <string name="jack">Jack</string>
    <string name="type_a_message">Type a message.....</string>
    <string name="followers">Followers:</string>
    <string name="_22758">0</string>
    <string name="setting_page">Settings</string>
    <string name="johnsan">johnsan</string>
    <string name="johnsan_gmail_com">johnsan@gmail.com</string>
    <string name="phone">Phone :</string>
    <string name="_7898979878">7898979878</string>
    <string name="birthday">Birthday :</string>
    <string name="_25_october_1985">25 October 1985</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="delete_account">Delete Account</string>
    <string name="clear_serach_history">Clear Search History</string>
    <string name="clear_conversation">Clear Conversation</string>
    <string name="clear_data">Clear Data</string>
    <string name="term_use"><![CDATA[Term & Use]]></string>
    <string name="share_the_app">Share the App</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="search_by_user_name">Search by User name</string>
    <string name="enter_a_subject">Enter a subject....</string>
    <string name="description">Description</string>
    <string name="write_description">Write description</string>
    <string name="send">Send</string>
    <string name="_1h_ago">1h ago</string>
    <string name="notification_message">"Lorem ipsum dolor sit amet,consecture adipicing elit",looks like latin beacause
                            in its youth ,centuries ago,it was latin,Latin America is a group of countries.</string>
    <string name="_1_november_2019">1 November 2019</string>
    <string name="gallery">Gallery</string>
    <string name="next">Next</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="brightness">Brightness</string>
    <string name="constrant">Constrant</string>
    <string name="satiration">satiration</string>
    <string name="filter_normal">Normal</string>
    <string name="filters">Filter</string>
    <string name="all_comments">Comments</string>
    <string name="johnson">Johnson</string>
    <string name="nic_pic">Nic pic</string>
    <string name="add_your_comments">Add your comments....</string>
    <string name="see_more">See more</string>
    <string name="bikranjeet">Bikranjeet</string>
    <string name="hello_how_are_you">Hello, how are you?</string>
    <string name="sunny">Sunny</string>
    <string name="john">John</string>
    <string name="bill_gates">Bill gates</string>
    <string name="mark_zuckerberg">Mark zuckerberg</string>
    <string name="enter_your_email_address">Enter your email address below and we\'ll send you a verification code.</string>
    <string name="submit">Submit</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="type_otp">Type your OTP number which you recieved in your email address</string>
    <string name="new_password">Create new password</string>
    <string name="old_password">Confirm new password</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="clear_c">Are you sure you want to clear your conversation</string>
    <string name="discard">Discard</string>
    <string name="cancle">Clear</string>
    <string name="enter_your_otp">Enter OTP</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phonenumber">Phone Number:</string>
    <string name="user_name2">user name</string>
    <string name="user_name3">User Name:</string>
    <string name="dateofbirth">Date of Birth:</string>
    <string name="_01_01_2001">08/03/1999</string>
    <string name="email2">Email:</string>
    <string name="email1">email</string>
    <string name="pick_image_intent_text">Pick Image</string>
    <string name="select_pictures">Select Image</string>
    <string name="uplaodVideo">Uplaod Video</string>
    <string name="uploadImage">Uplaod Image</string>
    <string name="firstName">First Name</string>
    <string name="fisrtname">first name</string>
    <string name="lstname">last name</string>
    <string name="lastname">Last Name</string>
    <string name="you_have_no_posts">You have no posts</string>
    <string name="no_videos_found">No videos found</string>
    <string name="select_people_to_send_message">Select people to send message</string>
    <string name="add_user">Add users</string>
    <string name="contact">Contact</string>
    <string name="type_comment">Type a comment</string>

    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="todo">TODO</string>>
</resources>
