<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SplashFragment">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:src="@mipmap/logo"
        android:id="@+id/splashImageLogo"
        android:contentDescription="@string/splashimage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:id="@+id/splashSignupButton"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/splash_btn_back"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/log_in"
            android:id="@+id/splashLoginButton"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/splash_btn_back"
            />



    </LinearLayout>

</RelativeLayout>