<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ForgotPassword2">

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="@style/NewDialog"
        android:id="@+id/progress"
        android:background="@drawable/custom_progress"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarForgotPassword2"
        >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:layout_scrollFlags="scroll|enterAlways"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:id="@+id/rela">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:layout_marginLeft="5dp"
                android:id="@+id/imageBackForgotPassword2"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password1"
                android:textColor="@android:color/black"
                android:layout_centerInParent="true"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:id="@+id/textTitle"/>


        </RelativeLayout>



    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/appbarForgotPassword2"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/type_otp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"
            android:id="@+id/text3"
            />


        <EditText
            android:id="@+id/forgot2UserOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:paddingBottom="20dp"
            android:inputType="text"
            android:drawableStart="@mipmap/email"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@drawable/login_signup_edit_text_back"
            android:hint="@string/enter_your_otp"
            android:textColor="@android:color/black"
            android:layout_marginTop="70dp"
            />


        <EditText
            android:id="@+id/forgot2UserNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            android:paddingBottom="20dp"
            android:inputType="textPassword"
            android:drawableStart="@mipmap/password"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@drawable/login_signup_edit_text_back"
            android:hint="@string/new_password"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/forgot2UserConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            android:paddingBottom="20dp"
            android:inputType="textPassword"
            android:drawableStart="@mipmap/password"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@drawable/login_signup_edit_text_back"
            android:hint="@string/old_password"
            android:textColor="@android:color/black" />


        <Button
            android:layout_width="110dp"
            android:layout_height="37dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="17sp"
            android:id="@+id/forgot2Submit"
            android:background="@mipmap/sign_up_button"/>


    </LinearLayout>


</RelativeLayout>