<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ForgotPassword1">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarForgotPassword1"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:layout_scrollFlags="scroll|enterAlways"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:id="@+id/rela">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/imageBackForgotPassword1"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password1"
                    android:textColor="@android:color/black"
                    android:layout_centerInParent="true"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    android:id="@+id/textTitle"/>


            </RelativeLayout>



        </androidx.appcompat.widget.Toolbar>



    </com.google.android.material.appbar.AppBarLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/appbarForgotPassword1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/enter_your_email_address"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:gravity="center"
        android:id="@+id/text3"
   />


    <EditText
        android:id="@+id/forgotUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:paddingBottom="20dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@mipmap/email"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black"
        android:textCursorDrawable="@drawable/login_signup_edit_text_back"
        android:hint="@string/enter_your_email"
        android:textColor="@android:color/black"
        android:layout_marginTop="70dp"
        />


        <Button
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="17sp"
            android:id="@+id/forgotSubmit"
            android:background="@mipmap/sign_up_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="6">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/do_you_have_an_account"
            android:textSize="17sp"
            android:gravity="end|center"
            android:textColor="@color/black"
            android:layout_weight="4"
            />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="35dp"
                android:orientation="vertical"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/forgot_login_text"
                    />

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:background="@color/black"

                    />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            style="@style/NewDialog"
            android:id="@+id/progress"
            android:background="@drawable/custom_progress"
            android:visibility="gone"
            />
    </LinearLayout>

</RelativeLayout>