<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center_vertical"
    tools:context=".Fragments.EditImage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/brightness"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/seekar_brightness"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/constrant"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/seekar_constrant"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/satiration"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"/>

        <SeekBar
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekar_saturation"/>


    </LinearLayout>

</LinearLayout>